# solar-flare-utac

./: .zenodo.json  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
data/: flare_catalog_summary.yaml  goes_xray_annual_stats.yaml
docs/: cli.md  index.md  physics.md
notebooks/: 01_solar_utac_overview.ipynb  02_goes_crep_analysis.ipynb  03_flare_cascade.ipynb  04_gamma_solar_calibration.ipynb
src/diamond_setup/: _types.py  preset.py
src/diamond_setup/templates/: __init__.py  genesis.py  minimal.py
src/solar_flare_utac/: __init__.py  active_region.py  benchmark.py  cli.py  constants.py  crep_solar.py  geomagnetic.py  goes_loader.py  reconnection.py  superflare.py  system.py
tests/: test_active_region.py  test_diamond_interface.py  test_reconnection.py  test_superflare.py
