[project]
name = "solar-flare-utac"
version = "0.1.0"
description = "Solar flare magnetic avalanche threshold — GenesisAeon Package 21"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johann Römer / MOR Research Collective" }]
requires-python = ">=3.11"
keywords = [
    "solar-flare", "utac", "crep", "magnetic-reconnection",
    "space-weather", "phase-transition", "self-organized-criticality",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
astropy = ["astropy>=6.0"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
solar-utac = "solar_flare_utac.cli:app"

[project.urls]
Homepage = "https://github.com/genesisaeon/solar-flare-utac"
Repository = "https://github.com/genesisaeon/solar-flare-utac"
Zenodo = "https://doi.org/10.5281/zenodo.19645351"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solar_flare_utac"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
